--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   debug_logger: ^0.0.23
   device_info: ^2.0.2
   double_back_to_close_app: ^2.0.1
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.7
   flutter:
     sdk: flutter
   flutter_config: ^2.0.0
@@ -58,6 +60,9 @@ dependencies:
   upgrader: ^3.4.1
   url_launcher: ^6.0.6
   video_player: ^2.2.7
+
+dependency_overrides:
+  firebase_messaging_platform_interface: 3.1.6
 
 dev_dependencies:
   build_runner: ^2.1.7
