chore: update afyamojacore version

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Publish myCareHub Demo binary to TestFlight
     timeout-minutes: 40
     runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/debug-ios-certificates'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/alpha'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -30,7 +30,7 @@ jobs:
       - name: Install flutter dependencies
         run: flutter pub get
 
-      - name: Convert secret to gc file
+      - name: Setup environment items
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
           ENCODED_APP_ENV: ${{ secrets.ENCODED_APP_ENV }}
@@ -46,7 +46,7 @@ jobs:
           echo $INFO_PLIST_FILE > ./Runner/info.plist
           echo $GOOGLE_SERVICES_INFO_PLIST_FILE > ./Runner/GoogleService-Info.plist
 
-      - name: Code sign and build prod app
+      - name: Code sign and build demo app
         env:
           APPLE_API_KEY_ID: ${{secrets.APPLE_API_KEY_ID}}
           APPLE_ISSUER_ID: ${{secrets.APPLE_ISSUER_ID}}
@@ -83,7 +83,7 @@ jobs:
       - name: Install flutter dependencies
         run: flutter pub get
 
-      - name: Convert secret to gc file
+      - name: Setup environment items
         env:
           GC_KEYS: ${{ secrets.GC_KEYS }}
           ENCODED_APP_ENV: ${{ secrets.ENCODED_APP_ENV }}
