--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="false"
         android:fullBackupContent="@xml/my_backup_rules"
         android:name="io.flutter.app.FlutterApplication"
-        android:label="My Afya Hub"
+        android:label="myCareHub"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
         <activity android:name=".MainActivity"
