--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_graphql_client: ^0.1.23
   flutter_html: ^3.0.0-alpha.2
   flutter_image_compress: ^1.0.0
+  flutter_local_notifications: ^9.5.2
   flutter_localizations:
     sdk: flutter
   flutter_pdfview: ^1.2.1
