--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,20 +10,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <application android:usesCleartextTraffic="true"
-        android:allowBackup="false"
-        android:fullBackupContent="@xml/my_backup_rules"
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="myCareHub"
-        android:requestLegacyExternalStorage="true"
-        android:icon="@mipmap/ic_launcher">
-        <activity android:name=".MainActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+    <application android:usesCleartextTraffic="true" android:allowBackup="false" android:fullBackupContent="@xml/my_backup_rules" android:name="io.flutter.app.FlutterApplication" android:label="myCareHub" android:requestLegacyExternalStorage="true" android:icon="@mipmap/ic_launcher">
+        <activity android:name=".MainActivity" android:launchMode="singleTop" android:screenOrientation="portrait" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -44,12 +32,6 @@
         </activity>
 
 
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
-        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
-            </intent-filter>
-        </receiver>
         <meta-data android:name="io.flutter.embedding.android.SplashScreenDrawable" android:resource="@drawable/launch_background" />
         <meta-data android:name="flutterEmbedding" android:value="2" />
         <meta-data android:name="firebase_performance_logcat_enabled" android:value="true" />
