--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.2
   flutter_image_compress: ^1.0.0
   flutter_local_notifications: ^9.5.2
+  flutter_local_notifications_platform_interface: ^5.0.0
   flutter_localizations:
     sdk: flutter
   flutter_pdfview: ^1.2.1
