--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   debug_logger: ^0.0.23
   device_info: ^2.0.2
   double_back_to_close_app: ^2.0.1
+  firebase_analytics: ^9.1.1
   firebase_core: ^1.12.0
   firebase_messaging: ^11.2.7
   flutter:
@@ -61,6 +62,7 @@ dependencies:
   webview_flutter: ^3.0.4
 
 dependency_overrides:
+  firebase_analytics_platform_interface: 3.0.5
   firebase_messaging_platform_interface: 3.1.6
 
 dev_dependencies:
