--- a/ios/Flutter/prod.xcconfig
+++ b/ios/Flutter/prod.xcconfig
@@ -5,4 +5,4 @@
 
 PRODUCT_BUNDLE_IDENTIFIER=com.mycarehub.prohealth360
 FLUTTER_TARGET=lib/bin/main_prod.dart
-APP_NAME=myCareHub
+APP_NAME=ProHealth360
