feat: setup release

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Publish ProHealth360 Demo binary to TestFlight
     timeout-minutes: 40
     runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/alpha'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/upgrade_packages'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
