--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.0.15
   shared_themes: ^0.1.4
   shimmer: ^2.0.0
+  sms_autofill: ^2.2.0
   sqflite: ^2.0.2+1
   stream_chat_flutter: ^4.3.0
   transparent_image: ^2.0.0
