--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Publish ProHealth360 Demo binary to TestFlight
     timeout-minutes: 40
     runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/upgrade_packages'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/alpha'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -25,7 +25,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-          flutter-version: "2.10.5"
+          flutter-version: "3.0.4"
 
       - name: Install flutter dependencies
         run: flutter pub get
@@ -78,7 +78,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-          flutter-version: "2.10.5"
+          flutter-version: "3.0.4"
 
       - name: Install flutter dependencies
         run: flutter pub get
