--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   flutter_config: ^2.0.0
   flutter_graphql_client: ^0.1.23
   flutter_html: ^3.0.0-alpha.5
-  flutter_image_compress: ^1.0.0
   flutter_local_notifications: ^9.6.1
   flutter_local_notifications_platform_interface: ^5.0.0
   flutter_localizations:
@@ -35,11 +34,9 @@ dependencies:
   google_fonts: 2.2.0
   html: ^0.15.0
   http: ^0.13.3
-  image_picker: ^0.8.5+3
   intl: ^0.17.0
   json_annotation: ^4.5.0
   json_serializable: ^6.2.0
-  launch_review: ^3.0.1
   path: ^1.8.1
   path_provider: ^2.0.11
   pin_code_text_field: ^1.8.0
@@ -48,15 +45,12 @@ dependencies:
   quiver: ^3.0.1+1
   rxdart: ^0.27.4
   sentry_flutter: ^6.6.2
-  share: ^2.0.4
+  share_plus: ^4.0.10
   shared_preferences: ^2.0.15
   shared_themes: ^0.1.4
-  shimmer: ^2.0.0
   sms_autofill: ^2.2.0
   sqflite: ^2.0.2+1
   stream_chat_flutter: ^4.3.0
-  transparent_image: ^2.0.0
-  uni_links: ^0.5.1
   unicons: ^2.1.0
   url_launcher: ^6.1.4
   webview_flutter: ^3.0.4
